# coverme

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  coverme.py  pyproject.toml  setup.py
.github/workflows/: release.yml
etc/coverme/: config.example.yml
etc/periodic/daily/: backup
